[package]
name = "pq"
version = "0.1.0"
edition = "2024"
authors= ["Mojtaba Safavi <sms7182@gmail>"]
description="Command-line Parquet file viewer written in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sms7182/parquet"
readme = "README.md"

[dependencies]
anyhow = "1.0.102"
arrow = "58.2.0"
parquet = "58.2.0"

